--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "jspdf": "^2.5.2",
     "jszip": "^3.10.1",
     "lucide-vue-next": "^0.468.0",
+    "mammoth": "^1.11.0",
     "pinia": "^2.3.0",
     "pptxgenjs": "^3.12.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
