--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "gemini-ppt-workbench",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.4",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,7 +11,62 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:style": "stylelint \"**/*.{css,vue}\"",
-    "lint:style:fix": "stylelint \"**/*.{css,vue}\" --fix"
+    "lint:style:fix": "stylelint \"**/*.{css,vue}\" --fix",
+    "postinstall": "electron-builder install-app-deps || true",
+    "rebuild": "@electron/rebuild",
+    "electron:dev": "node scripts/check-port.js 5173 && node scripts/build-electron.js && concurrently \"vite\" \"wait-on http://localhost:5173 -t 60000 && cross-env VITE_DEV_SERVER_URL=http://localhost:5173 electron .\" --kill-others --raw",
+    "electron:build": "npm run electron:build:electron && vite build",
+    "electron:build:electron": "node scripts/build-electron.js",
+    "electron:pack": "npm run electron:build && electron-builder",
+    "electron:dist": "npm run electron:build && electron-builder",
+    "electron": "node scripts/build-electron.js && electron ."
+  },
+  "main": "dist-electron/main.js",
+  "build": {
+    "appId": "com.gemini.ppt.workbench",
+    "productName": "Gemini PPT Workbench",
+    "directories": {
+      "output": "dist-electron"
+    },
+    "files": [
+      "dist/**/*",
+      "dist-electron/**/*",
+      "package.json",
+      "public/icon/favicon.ico"
+    ],
+    "extraFiles": [
+      {
+        "from": "node_modules",
+        "to": "node_modules",
+        "filter": [
+          "**/*"
+        ]
+      }
+    ],
+    "win": {
+      "target": [
+        "nsis"
+      ],
+      "icon": "public/icon/favicon.ico"
+    },
+    "mac": {
+      "target": [
+        "dmg"
+      ],
+      "icon": "public/icon/favicon.ico",
+      "category": "public.app-category.productivity"
+    },
+    "linux": {
+      "target": [
+        "AppImage"
+      ],
+      "icon": "public/icon/favicon.ico",
+      "category": "Office"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
@@ -26,14 +82,21 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@electron/rebuild": "^3.7.0",
     "@eslint/js": "^9.15.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tsconfig/node22": "^22.0.5",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "concurrently": "^9.1.0",
+    "cross-env": "^7.0.3",
+    "electron": "^33.0.0",
+    "electron-builder": "^25.1.8",
+    "esbuild": "^0.24.0",
     "eslint": "^9.15.0",
     "eslint-plugin-vue": "^9.32.0",
+    "sql.js": "^1.13.0",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-config-standard-vue": "^1.0.0",
@@ -41,6 +104,7 @@
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.2.0",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^2.2.0",
+    "wait-on": "^8.0.1"
   }
 }
