--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gemini-ppt-workbench",
   "private": true,
   "version": "0.1.4",
-  "license": "MIT",
+  "license": "GPL-2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
