Enhance GitHub Actions workflow to create tags automatically for new releases. Update release process to include tag name in the output and adjust release naming conventions for consistency.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,6 +58,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Download all artifacts
         uses: actions/download-artifact@v4
@@ -69,18 +72,31 @@ jobs:
         run: |
           if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
+            TAG_NAME="v$VERSION"
           else
             VERSION=$(node -p "require('./package.json').version")
+            TAG_NAME="v$VERSION"
+            # 如果標籤不存在，創建它
+            if ! git rev-parse "$TAG_NAME" >/dev/null 2>&1; then
+              git config user.name "github-actions[bot]"
+              git config user.email "github-actions[bot]@users.noreply.github.com"
+              git tag -a "$TAG_NAME" -m "Release $TAG_NAME"
+              git push origin "$TAG_NAME"
+              echo "Created tag: $TAG_NAME"
+            fi
           fi
           echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
           echo "Version: $VERSION"
+          echo "Tag: $TAG_NAME"
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          name: Release v${{ steps.get_version.outputs.version }}
+          tag_name: ${{ steps.get_version.outputs.tag_name }}
+          name: Release ${{ steps.get_version.outputs.tag_name }}
           body: |
-            ## Gemini PPT Workbench v${{ steps.get_version.outputs.version }}
+            ## Gemini PPT Workbench ${{ steps.get_version.outputs.tag_name }}
             
             ### 下載安裝包
             
